# claude-code-gpt-5-codex

./: .env.template  ChatCompletions_API_to_GenericStreamingChunk.md  pyproject.toml
claude_code_proxy/: claude_code_router.py  proxy_config.py  route_model.py
common/: tracing_in_markdown.py  utils.py  utils_better_code_but_broken.py  utils_code_smell_but_stable.py
yoda_example/: yoda_speak.py
